[package]
name = "search-query-parser-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
search-query-parser = { path = "../search-query-parser" }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.2.1"
